--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="bg-very-light-green"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
